Fixed page overflow bug

--- a/StronkaBITEHack/src/styles/aboutPageStyles/about3.css
+++ b/StronkaBITEHack/src/styles/aboutPageStyles/about3.css
@@ -97,7 +97,7 @@
 
     .about3-container {
         overflow-x: hidden;
-        height: 35vh;
+        height: 75vh;
     }
 
     .about3-image-container {
