--- a/StronkaBITEHack/src/styles/mainPageStyles/videoPlayer.css
+++ b/StronkaBITEHack/src/styles/mainPageStyles/videoPlayer.css
@@ -30,6 +30,6 @@
 @media only screen and (max-width: 768px) {
 
     .video-container {
-        max-width: 50vw;
+        max-width: 45vw;
     }
 }
