--- a/StronkaBITEHack/src/styles/organizersStyles/organizers.css
+++ b/StronkaBITEHack/src/styles/organizersStyles/organizers.css
@@ -95,7 +95,7 @@
     display: flex;
     flex-direction: column;
     /*text-align: left;*/
-    font-size: 1rem;
+    font-size: 0.9rem;
 }
 
 .best-title {
